2004-02-13  Atsushi Enomoto <atsushi@ximian.com>

	* Added DTMXPathDocumentWriter.cs. It supports DTMXPathNavigator as
	  the resulting document tree.
	* DTMXPathDocumentBuilder.cs : Code refactory (to get closer to dtm
	  writer and commonify tasks they both should do). Reduced initial
	  array size (400 to 200, for attribute 800 to 200), and extending 
	  size from 2x to 4x (to reduce _times_ of allication copy).
	* DTMXPathNode.cs : (and all above) added experimental "DTM_CLASS"
	  switch, which changes nodes from struct to class. (It will reduce
	  memory consumption by 2/3, but will also reduce speed by 2/3.)

2004-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocumentBuilder.cs : Namespace nodes are incorrectly created.
	  This fix should make XPathDocument compatible with XmlDocument.

2004-01-26  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocument.cs : CreateNavigator() should return the first root
	  as a clone.
	* DTMXPathNavigator.cs : ComparePosition() incorrectly compared 
	  attributes and namespaces orders.  Implemented IsSamePosition() more
	  efficient.  MoveToFirstNamespace() should return false when the 
	  current node is either attribute or namespace.  Fixed IsDescendant()
	  which looks resulted in incorrect behavior.

2003-12-18  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* DTMXPathDocumentBuilder.cs : Removed supportsID argument and always
	  assumes to support IDs when specified XmlValidatingReader.
	  Quick fix for NullReferenceException when type was null.

2003-11-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* KeyPattern.cs : Matches() should iterate candidate keys to the end.

2003-11-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* IdPattern.cs,
	  KeyPattern.cs : Implemented Matches(), overrode DefaultPriority,
	  modified inheritance.
	* Pattern.cs : Added id and key pattern support.

2003-11-02  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* DTMXPathNavigator.cs : Fixed MoveToNamespace() that might result in