@@ -17,7 +17,12 @@ using System.Xml.XPath;
 namespace Mono.Xml.XPath
 {
 
-	public class DTMXPathDocumentBuilder
+#if OUTSIDE_SYSTEM_XML
+	public
+#else
+	internal
+#endif
+	class DTMXPathDocumentBuilder
 	{
 		public DTMXPathDocumentBuilder (string url)
 			: this (url, XmlSpace.None, 200)
@@ -95,7 +100,6 @@ namespace Mono.Xml.XPath
 		int nsIndexAtStart;
 
 		int prevSibling;
-		int position;
 		int lastNsInScope;
 		bool skipRead = false;
 
@@ -114,7 +118,7 @@ namespace Mono.Xml.XPath
 			// index 0 is dummy. No node (including Root) is assigned to this index
 			// So that we can easily compare index != 0 instead of index < 0.
 			// (Difference between jnz or jbe in 80x86.)
-			AddNode (0, 0, 0, 0, 0, XPathNodeType.All, "", false, "", "", "", "", "", 0, 0, 0);
+			AddNode (0, 0, 0, 0, XPathNodeType.All, "", false, "", "", "", "", "", 0, 0, 0);
 			nodeIndex++;
 			AddAttribute (0, null, null, null, null, null, 0, 0);
 			AddNsNode (0, null, null, 0);
@@ -122,7 +126,7 @@ namespace Mono.Xml.XPath
 			AddNsNode (1, "xml", XmlNamespaces.XML, 0);
 
 			// add root.
-			AddNode (0, 0, 0, -1, 0, XPathNodeType.Root, xmlReader.BaseURI, false, "", "", "", "", "", 1, 0, 0);
+			AddNode (0, 0, 0, -1, XPathNodeType.Root, xmlReader.BaseURI, false, "", "", "", "", "", 1, 0, 0);
 
 			this.nodeIndex = 1;
 			this.lastNsInScope = 1;
@@ -152,7 +156,6 @@ namespace Mono.Xml.XPath
 			}
 
 			prevSibling = nodeIndex;
-			position = 0;
 			switch (xmlReader.NodeType) {
 			case XmlNodeType.Element:
 			case XmlNodeType.CDATA:
@@ -165,8 +168,6 @@ namespace Mono.Xml.XPath
 				else
 					while (nodes [prevSibling].Depth != xmlReader.Depth)
 						prevSibling = nodes [prevSibling].Parent;
-				if (prevSibling != 0)
-					position = nodes [prevSibling].Position + 1;
 
 				nodeIndex++;
 
@@ -196,7 +197,7 @@ namespace Mono.Xml.XPath
 
 			switch (xmlReader.NodeType) {
 			case XmlNodeType.Element:
-				ProcessElement (parent, prevSibling, position);
+				ProcessElement (parent, prevSibling);
 				break;
 			case XmlNodeType.CDATA:
 			case XmlNodeType.SignificantWhitespace:
@@ -208,7 +209,6 @@ namespace Mono.Xml.XPath
 					0,
 					prevSibling,
 					xmlReader.Depth,
-					position,
 					nodeType,
 					xmlReader.BaseURI,
 					xmlReader.IsEmptyElement,
@@ -236,9 +236,9 @@ namespace Mono.Xml.XPath
 			}
 		}
 
-		private void ProcessElement (int parent, int previousSibling, int position)
+		private void ProcessElement (int parent, int previousSibling)
 		{
-			WriteStartElement (parent, previousSibling, position);
+			WriteStartElement (parent, previousSibling);
 
 			// process namespaces and attributes.
 			if (xmlReader.MoveToFirstAttribute ()) {
@@ -269,7 +269,7 @@ namespace Mono.Xml.XPath
 			}
 		}
 
-		private void WriteStartElement (int parent, int previousSibling, int position)
+		private void WriteStartElement (int parent, int previousSibling)
 		{
 			PrepareStartElement (previousSibling);
 
@@ -277,7 +277,6 @@ namespace Mono.Xml.XPath
 				0, // dummy:firstAttribute
 				previousSibling,
 				xmlReader.Depth,
-				position,
 				XPathNodeType.Element,
 				xmlReader.BaseURI,
 				xmlReader.IsEmptyElement,
@@ -372,7 +371,7 @@ namespace Mono.Xml.XPath
 		}
 
 		// Here followings are skipped: firstChild, nextSibling, 
-		public void AddNode (int parent, int firstAttribute, int previousSibling, int depth, int position, XPathNodeType nodeType, string baseUri, bool isEmptyElement, string localName, string ns, string prefix, string value, string xmlLang, int namespaceNode, int lineNumber, int linePosition)
+		public void AddNode (int parent, int firstAttribute, int previousSibling, int depth, XPathNodeType nodeType, string baseUri, bool isEmptyElement, string localName, string ns, string prefix, string value, string xmlLang, int namespaceNode, int lineNumber, int linePosition)
 		{
 			if (nodes.Length < nodeIndex + 1) {
 				nodeCapacity *= 4;
@@ -388,7 +387,6 @@ namespace Mono.Xml.XPath
 			nodes [nodeIndex].PreviousSibling = previousSibling;
 			nodes [nodeIndex].NextSibling = 0;	// dummy
 			nodes [nodeIndex].Depth = depth;
-			nodes [nodeIndex].Position = position;
 			nodes [nodeIndex].NodeType = nodeType;
 			nodes [nodeIndex].BaseURI = baseUri;
 			nodes [nodeIndex].IsEmptyElement = isEmptyElement;
