@@ -15,10 +15,15 @@ using System.Xml.XPath;
 
 namespace Mono.Xml.XPath
 {
-#if DTM_CLASS
-	public class DTMXPathLinkedNode
+#if OUTSIDE_SYSTEM_XML
+	public
 #else
-	public struct DTMXPathLinkedNode
+	internal
+#endif
+#if DTM_CLASS
+		class DTMXPathLinkedNode
+#else
+		struct DTMXPathLinkedNode
 #endif
 	{
 		public int FirstChild;
@@ -28,7 +33,6 @@ namespace Mono.Xml.XPath
 		public int FirstAttribute;
 		public int FirstNamespace;
 		public int Depth;
-		public int Position;
 		public XPathNodeType NodeType;
 		public string BaseURI;
 		public bool IsEmptyElement;
@@ -41,10 +45,15 @@ namespace Mono.Xml.XPath
 		public int LinePosition;
 	}
 
-#if DTM_CLASS
-	public class DTMXPathAttributeNode
+#if OUTSIDE_SYSTEM_XML
+	public
 #else
-	public struct DTMXPathAttributeNode
+	internal
+#endif
+#if DTM_CLASS
+		class DTMXPathAttributeNode
+#else
+		struct DTMXPathAttributeNode
 #endif
 	{
 		public int OwnerElement;
@@ -58,10 +67,15 @@ namespace Mono.Xml.XPath
 		public int LinePosition;
 	}
 
-#if DTM_CLASS
-	public class DTMXPathNamespaceNode
+#if OUTSIDE_SYSTEM_XML
+	public
 #else
-	public struct DTMXPathNamespaceNode
+	internal
+#endif
+#if DTM_CLASS
+		class DTMXPathNamespaceNode
+#else
+		struct DTMXPathNamespaceNode
 #endif
 	{
 		public int DeclaredElement;
